章鱼更新啦

--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
   <div>
     <h3>职业技能</h3>
     <p>
-    <b>工作能力</b>：精通主流WEB前端开发技术，总结出一套自己的CSS基础类库，能够快速解决网站样式的兼容性问题；<br> 熟练使用Jquery、Zepto、Juicer、EasyUI、Angular等多种JS框架，并写过多个Jquery插件。 <br>熟悉NodeJs和Express框架使用，已在魔泊云上提交过自己的NodeJs的线上应用。<br>
-    使用React+Redux+ES6+Webpack全家桶做过几个项目，根据React技术的AntDesign框架着手开发SAAS服务平台。期间对VueJs有着深刻的喜爱。通过JSBriage和Schema解决App桥连HTML5通信问题。<br>
+    <b>工作能力</b>：
+    精通主流WEB前端开发技术，总结出一套自己的CSS基础类库，能够快速解决网站样式的兼容性问题；<br> 熟练使用Jquery、Zepto、Juicer、EasyUI、Angular等多种JS框架，并写过多个Jquery插件。 <br>熟悉NodeJs和Express框架使用，已在魔泊云上提交过自己的NodeJs的线上应用。<br>
+    使用React+Redux+ES6+Webpack全家桶做过几个项目，根据React技术的AntDesign框架着手开发SAAS服务平台。
+    期间对VueJs有着深刻的喜爱。通过JSBriage和Schema解决App桥连HTML5通信问题。<br>
     多年移动端Hybrid App开发经验，迅速解决因OS不同而导致的兼容问题和移动端开发涉及的技术问题。<br>
-    曾做过2年的JAVA研发，熟练编写多种开发语言，以及了解一整套的项目实施和解决方案。对数据优化、效率优化、SEO、用户体验有深刻的研究。对用户体验、交互操作流程、及用户需求有深刻理解。深刻理解WEB标准，在可用性、可访问性、浏览器兼容性等方面有实践经验。</p>
+    曾做过2年的JAVA研发，熟练编写多种开发语言，以及了解一整套的项目实施和解决方案。
+    对数据优化、效率优化、SEO、用户体验有深刻的研究。
+    深刻理解WEB标准，在可用性、可访问性、浏览器兼容性等方面有实践经验。</p>
   </div>
   <div>
     <h3>项目经验</h3>
