--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     #container{max-width:800px;margin:auto;padding:10px;font-size:14px;line-height:1.5;color:#5b6770;}
     img{position:absolute;right:2%;top:60px;border-radius:50%;}
     @media all and (max-device-width:400px){img{width:70px;}}
-    p{margin:2px 0px 10px;;padding: 10px;box-shadow:1px 1px 7px rgba(0, 0, 0, 0.2);border-radius:4px;}
+    p{margin:2px 0px 10px;;padding: 10px;box-shadow:1px 1px 7px rgba(0, 0, 0, 0.2);border-radius:4px;word-break:break-all;white-space:pre-wrap;}
     div{margin:5px 0 15px;}
     h1{font-size:22px;}
     .i{color:#999;}
