--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>个人概况</h3>
     <p><b>姓　名</b>：龚法曾　　<b>性　别</b>：男<br>
       <b>学　历</b>：专科　　　<b>生　日</b>：1981<br>
-      <b>工　龄</b>：8年<br>
+      <b>工　龄</b>：9年<br>
       <b>手　机</b>：<a href="tel:13811194576">13811194576</a><br>
       <b>电子邮件</b>：n@aceyo.com<br>
       <b>就职方向</b>：Web前端研发或相关管理工作
@@ -54,6 +54,9 @@
   </div>
   <div>
     <h3>项目经验</h3>
+      <p><b>名　称</b>：哗啦啦餐饮管理平台<br>
+      <b>网　址</b>：www.hualala.com<br>
+      <b>描　述</b>：负责开发哗啦啦“互联网自助餐厅”餐饮信息管理系统开发。使用的技术栈为：react+antd+redux+es6+less。</p>
       <p><b>名　称</b>：章鱼微站<br>
       <b>网　址</b>：m.8win.com<br>
       <b>描　述</b>：网站属于移动端网站，包括资讯和购彩等功能。并且有一部分功能是app通用的功能页面。使用多种前端优化方案，并解决各种前端的技术问题。<br>
@@ -77,6 +80,10 @@
   </div>
   <div>
     <h3>工作经历</h3>
+    <p><b>时　间</b>：2017.7--2018.8<br>
+    <b>公　司</b>：多来点信息技术有限公司<br>
+    <b>职　位</b>：高级web前端研发<br>
+    <b>描　述</b>：负责开发哗啦啦“互联网自助餐厅”餐饮信息管理系统开发。</p>
     <p><b>时　间</b>：2015.10--2017.3<br>
     <b>公　司</b>：章鱼彩票网<br>
     <b>职　位</b>：高级前端研发经理<br>
