--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h3>职业技能</h3>
     <p>
     <b>1、</b>精通主流WEB前端开发技术，总结出一套自己的CSS基础类库，能够快速解决网站样式的兼容性问题。<br>
-    <b>2、</b>熟练使用Jquery、Zepto、Juicer、EasyUI、Angular等多种JS框架，并写过多个Jquery插件。 <br>
+    <b>2、</b>熟练使用Jquery、Zepto、Juicer、EasyUI、React等多种JS框架，并写过多个Jquery插件。 <br>
     <b>3、</b>熟练使用NodeJs和Express框架，已在魔泊云上提交过自己的NodeJs的线上应用。<br>
     <b>4、</b>使用React+Redux+ES6+Webpack全家桶做过几个项目，根据React技术的AntDesign框架着手开发SAAS服务平台；
     通过JSBriage和Schema解决App桥连HTML5通信问题；期间对VueJs有着深刻的喜爱。<br>
