--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h3>个人概况</h3>
     <p><b>姓　名</b>：龚法曾　　<b>性　别</b>：男<br>
       <b>学　历</b>：专科　　　<b>生　日</b>：1981<br>
-      <b>工　龄</b>：9年<br>
+      <b>工　龄</b>：10年<br>
       <b>手　机</b>：<a href="tel:13811194576">13811194576</a><br>
       <b>电子邮件</b>：n@aceyo.com<br>
       <b>就职方向</b>：Web前端研发或相关管理工作
@@ -42,15 +42,15 @@
   <div>
     <h3>职业技能</h3>
     <p>
-    <b>1、</b>精通主流WEB前端开发技术，总结出一套自己的CSS基础类库，能够快速解决网站样式的兼容性问题。<br>
-    <b>2、</b>熟练使用Jquery、Zepto、Juicer、EasyUI、React等多种JS框架，并写过多个Jquery插件。 <br>
-    <b>3、</b>熟练使用NodeJs和Express框架，已在魔泊云上提交过自己的NodeJs的线上应用。<br>
-    <b>4、</b>使用React+Redux+ES6+Webpack全家桶做过几个项目，根据React技术的AntDesign框架着手开发SAAS服务平台；
+    本人追求：简洁、高效、优雅的开发风格，致力于代码的可读性、可重用性和可扩展性。
+GitHub存了部分曾写过的 React 代码以供参考。<a href="http://t.cn/A6h9bzg7">t.cn/A6h9bzg7</a><br>
+    <b>1、</b>熟练使用Jquery、Zepto、Juicer、EasyUI、React等多种JS框架，并写过多个Jquery插件。 <br>
+    <b>2、</b>熟练使用NodeJs和Express框架<br>
+    <b>3、</b>使用React+Redux+ES6+Webpack全家桶做过几个项目，根据React技术的AntDesign框架着手开发SAAS服务平台；
     通过JSBriage和Schema解决App桥连HTML5通信问题；期间对VueJs有着深刻的喜爱。<br>
-    <b>5、</b>多年移动端Hybrid App开发经验，迅速解决因OS不同而导致的兼容问题和移动端开发涉及的技术问题。<br>
-    <b>6、</b>曾做过2年的JAVA研发，熟练编写多种开发语言，以及了解一整套的项目实施和解决方案；
-    对数据优化、效率优化、SEO、用户体验有深刻的研究；
-    深刻理解WEB标准，在可用性、可访问性、浏览器兼容性等方面有实践经验。</p>
+    <b>4、</b>多年移动端Hybrid App开发经验，迅速解决因OS不同而导致的兼容问题和移动端开发涉及的技术问题。<br>
+    <b>5、</b>曾做过2年的JAVA研发，熟练编写多种开发语言，以及了解一整套的项目实施和解决方案；
+    对数据优化、效率优化、SEO、用户体验有深刻的研究；</p>
   </div>
   <div>
     <h3>项目经验</h3>
@@ -80,7 +80,7 @@
   </div>
   <div>
     <h3>工作经历</h3>
-    <p><b>时　间</b>：2017.7--2018.8<br>
+    <p><b>时　间</b>：2017.7--今<br>
     <b>公　司</b>：多来点信息技术有限公司<br>
     <b>职　位</b>：高级web前端研发<br>
     <b>描　述</b>：负责开发哗啦啦“互联网自助餐厅”餐饮信息管理系统开发。</p>
