--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div>
     <h3>职业技能</h3>
     <p>
-    本人追求：简洁、高效、优雅的开发风格，致力于代码的可读性、可重用性和可扩展性。
+    本人追求：简洁、高效、优雅的开发风格，致力于代码的可读性、可重用性和可扩展性。<br>
 GitHub存了部分曾写过的 React 代码以供参考。<a href="http://t.cn/A6h9bzg7">t.cn/A6h9bzg7</a><br>
     <b>1、</b>熟练使用Jquery、Zepto、Juicer、EasyUI、React等多种JS框架，并写过多个Jquery插件。 <br>
     <b>2、</b>熟练使用NodeJs和Express框架<br>
