--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     img,hr{border:0}li{list-style:none}
     
     a{-webkit-touch-callout:none;text-decoration:none;}
-    a:link{color:#5b6770;} a:visited{color:#5b6770;} a:hover,a:active,a:focus{color:#5b6770;outline:none;}
+    a:link{color:#3f97d8;} a:visited{color:#3f97d8;} a:hover,a:active,a:focus{color:#3f97d8;outline:none;}
     .rel{position:relative;}.tc{text-align:center;}
     
     #container{max-width:800px;margin:auto;padding:10px;font-size:14px;line-height:1.5;color:#5b6770;}
