--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>龚法曾的简历</title>
-  <link href="./favicon.svg" rel="icon" type="image/svg+xml" />
+  <link href="./favico.svg" rel="icon" type="image/svg+xml" />
   <style>
     body,ul{margin:0;padding:0;}dl,dd,h1,h2,h3,h4,h5,p,hr{margin:0;}
     body{font-family:"Helvetica Neue",Helvetica,STHeiTi,sans-serif;line-height:1.5;font-size:14px;color:#333;background: #F4F8FA;-webkit-user-select:none;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-webkit-overflow-scrolling:touch;}
